--- a/about.html
+++ b/about.html
@@ -3,12 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>about</title>
+    <style>
+        body {
+            color: gold;
+            /*background-color: navy;*/
+            background-image: url("https://media.licdn.com/dms/image/D4E12AQGIwEumbtJ8-Q/article-cover_image-shrink_720_1280/0/1698604777965?e=2147483647&v=beta&t=Raf-XG37cEuZ1w-FtVU-6WjzQUOvvi50j7A7xKS5Ab0");
+        }
+    </style>
 </head>
 <body>
 <a href="index.html">home</a>
 <a href="about.html">about</a>
 <a href="services.html">services</a>
 <a href="contact.html">contact</a>
-<p>am paul one of the most skilled and talented tutor studied from emobilis school where i acquired my skills from under a good program. under this skills i was able to start school for helping youths after finishing their kcse exams where they will acquire skills which may help them employ themselves</p>
+<center><p>Hi, Im paul osamo, im in emobilis and go to Stem high.</p>
+     <p>I have been coding for 2 years, and I think its fun.</p>
+     <p>When i got to college I want to double major in computer software and data science</p>
+       <p>Bye.</p></center>
 </body>
+
 </html>
