--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 <a href="contact.html">contact</a>
 
 <h1>call us on</h1>
-<p>find me on:07757643</p>or email me on:edasdf@gmail.com
+<p>find me on:0110612124</p>or email me on:paulosamo12@gmail.com
 
 </body>
 </html>
