--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 <a href="services.html">services</a>
 <a href="contact.html">contact</a>
 
-<h1>call us on</h1>
+<h1>for more information contact us on</h1>
 <p>find me on:0110612124</p>or email me on:paulosamo12@gmail.com
 
 </body>
