--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <a href="about.html">about</a>
 <a href="services.html">services</a>
 <a href="contact.html">contact</a>
-<h1><p>masii computer school</p></h1>
+<h1><p>computer school</p></h1>
 <p><b>we will highly appriciate you joining us</b></p>
 </body>
 </html>
