--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
 <a href="services.html">services</a>
 <a href="contact.html">contact</a>
 <h1><p>computer school</p></h1>
-<p><b>we will highly appriciate you joining us</b></p>
+<p><b>you are all welcomed to join us</b></p>
 </body>
 </html>
