--- a/services.html
+++ b/services.html
@@ -12,6 +12,8 @@
 <a href="contact.html">contact</a>
     <p>software instalation</p>
     <p>website development</p>
+    <p> Applicaion of visa cards</p>
+    <p> Giving driving license</p>
 
 </body>
 </html>
